# CS2006-Haskell-2

./: Expr.hi  Expr.hs  Main.hs  Parsing.hi  Parsing.hs  README.md  REPL.hs  Testing.hs  clean.sh  haskell2.cabal  test.txt
dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
git/: FETCH_HEAD  HEAD  MERGE_MSG.save  ORIG_HEAD  config  index
git/logs/: HEAD
git/logs/refs/: stash
git/logs/refs/heads/: FINAL_SUBMISSION  basic  main
git/logs/refs/remotes/origin/: FINAL_SUBMISSION  FNAL-with-ALL  basic  fixed-haskell  hard-features  main  medium-features
git/refs/: stash
git/refs/heads/: FINAL_SUBMISSION  basic  main
git/refs/remotes/origin/: FNAL-with-ALL  fixed-haskell  hard-features  medium-features
